--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Learning Flask</h1>
+        <a href="{{ url_for('index') }}"> <h1 class="title">Learning Flask</h1></a>
     </header>
 
     {% block content %}
