--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 <a href="#" class="btn-primary">
                     Sign up
                 </a>
-        <a href="#" class="btn-secondary">
+        <a href="{{ url_for('about') }}" class="btn-secondary">
                             Learn more
                         </a>
             </div>
